k8s.prod/fastapi-service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-prod
  namespace: prod
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: fastapi-prod
